crates/parser/test_files/errors/parse_error.sntn
target = "evm-ethereum-london"

func %f() {
    v0.i8 = call %foo 100.i8;
    v1
}
